--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 .header-h1{
-    color: rgb(74, 75, 75);
     width: 20%;
     height: 200px;
     background-color: ivory;
+    color: aliceblue;
 }
