--- a/css/4th.css
+++ b/css/4th.css
@@ -3,19 +3,30 @@ body{
     font-family: "Inconsolata", sans-serif;
     margin: 0 auto;
     overflow-x: hidden;
+    transition: ease-in-out 0.3s;
 }
 .header{
     position: fixed;
     background-color: rgb(31, 31, 31);
     color: white;
     width: 100%;
-    height: 60px;
+    height: auto;
     top: 0;
     left: 0;
     z-index: 1;
+}
+.header ul{
     display: flex;
     justify-content: space-around;
-    align-items: center;
+    flex-direction: row;
+    list-style-type: none;
+}
+.header li{
+    font-size: small;
+}
+.header a{
+    color: white;
+    text-decoration: none;
 }
 .section1 img{
     width: 100%;
@@ -97,43 +108,49 @@ body{
     letter-spacing: 1px;
 }
 .section2-3{
-    height: 1100px;
+    height: auto;
+}
+.background{
+    background-color: white;
+    padding: 0px 15px;
     box-shadow: 0px 10px 15px 0px  rgb(148, 148, 148);
-    width: 100% !important;
+}
+.background h3{
+    width: 49.5%;
+    background-color: rgb(179, 179, 179);
+    display: inline-block;
+    text-align: center;
+    font-weight: 100;
+}
+.right-h3{
+    float: right;
 }
 .first-div{
-    width: 47.5%;
-    height: 20px;
+    width: 100%;
+    height: auto;
     box-shadow: 0px 10px 15px 0px  rgb(148, 148, 148);
-    padding: 10px;
-    position: relative;
+    display: inline-block;
 }
 .second-div{
-    width: 47.6%;
-    height: 20px;
+    width: 47.5%;
+    height: auto;
     box-shadow: 0px 10px 15px 0px  rgb(148, 148, 148);
-    padding: 10px;
-    position: relative;
+    padding: 0px 10px;
     float: right;
 }
 .first-div h3{
-    position: absolute;
-    left: 50%;
-    top: 3%;
-    transform: translate(-50%,-50%);
     background-color: rgb(107, 107, 107);
     padding: 0px 44%;
     color: white;
     font-weight: 100;
+    margin: 20px;
 }
 .second-div h3{
-    position: absolute;
-    left: 50%;
-    top: 0%;
-    transform: translate(-50%,-50%);
-    padding: 0px 42%;
+    background-color: rgb(107, 107, 107);
+    padding: 0px 44%;
     color: black;
     font-weight: 100;
+    margin: 20px;
 }
 .inner-div h1{
     padding: 10px;
@@ -154,10 +171,9 @@ body{
 }
 .img{
     filter: grayscale(50%);
-    max-width: 100%;
+    width: 100%;
 }
 .section4{
-    width: 60%;
     margin: 0 auto;
 }
 .section4 h4{
@@ -195,6 +211,7 @@ button{
     margin-top: 10px;
     padding: 20px;
     width: 200px;
+    height: 40px;
 }
 .last-div{
     width: auto;
@@ -211,8 +228,23 @@ button{
         width: 70%;
     }
 }
-@media(max-width: 630px){
-    .section1 img{
-        min-width: 100%;
+@media(max-width: 601px){
+    .section4{
+        width: 60%;
     }
 }
+.header li:hover{
+    cursor: pointer;
+    transform: scale(1.15);
+    transition: all;
+    transition: ease-in-out 0.3s;
+}
+.background h3:hover{
+    cursor: pointer;
+}
+.input-div button:hover{
+    cursor: pointer;
+    color: black;
+    background-color: rgb(194, 194, 194);
+}
+
